fix z-index

--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -26,7 +26,7 @@ body {
   flex-basis: 225px;
   flex-shrink: 0;
   transition: transform 0.15s ease-in-out;
-  z-index: 1038;
+  z-index: 1000;
   transform: translateX(-250px);
 }
 #layoutSidenav #layoutSidenav_content {
@@ -53,7 +53,7 @@ body {
   width: 100%;
   height: 100vh;
   background: #000;
-  z-index: 1037;
+  z-index: 998;
   opacity: 0.5;
   transition: opacity 0.3s ease-in-out;
 }
@@ -131,7 +131,7 @@ body {
 .sb-topnav {
   padding-left: 0;
   height: 56px;
-  z-index: 1039;
+  z-index: 999;
 }
 .sb-topnav .navbar-brand {
   width: 225px;
